@@ -107,7 +107,7 @@
     "- [ladybird](context.ladybird.ipynb) - Ladybird automata\n",
     "- [levenshtein](context.levenshtein.ipynb) - Levenshtein (or edit-distance) automaton\n",
     "- [quotkbaseb](context.quotkbaseb.ipynb) - a transducer that divides by a number\n",
-    "- [random](context.random.ipynb) - generate a random automaton\n",
+    "- [random_automaton](context.random_automaton.ipynb) - generate a random automaton\n",
     "- [random_expression](context.random_expression.ipynb) - generate a random expression\n",
     "- [trie](context.trie.ipynb) - trie automaton from a file of (weighted) words"
    ]
