@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `context`.`random`\n",
+    "# `context`.`random_automaton`\n",
     "\n",
     "Generate a random automaton.  The states are guaranteed to be accessible, but some may be non coaccessible.\n",
     "\n",
@@ -166,7 +166,7 @@
     }
    ],
    "source": [
-    "b.random(3)"
+    "b.random_automaton(3)"
    ]
   },
   {
@@ -254,7 +254,7 @@
     }
    ],
    "source": [
-    "b.random(3)"
+    "b.random_automaton(3)"
    ]
   },
   {
@@ -348,7 +348,7 @@
     }
    ],
    "source": [
-    "b.random(3)"
+    "b.random_automaton(3)"
    ]
   },
   {
@@ -436,7 +436,7 @@
     }
    ],
    "source": [
-    "b.random(3)"
+    "b.random_automaton(3)"
    ]
   },
   {
@@ -567,7 +567,7 @@
     }
    ],
    "source": [
-    "vcsn.context('lal(abc), b').random(3, density=1, max_labels=1)"
+    "vcsn.context('lal(abc), b').random_automaton(3, density=1, max_labels=1)"
    ]
   },
   {
@@ -716,7 +716,7 @@
     }
    ],
    "source": [
-    "vcsn.context('lal(abc), b').random(3, max_labels=1, loop_chance=1, num_initial=3, num_final=3)"
+    "vcsn.context('lal(abc), b').random_automaton(3, max_labels=1, loop_chance=1, num_initial=3, num_final=3)"
    ]
   }
  ],
@@ -736,7 +736,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.1+"
   }
  },
  "nbformat": 4,
