@@ -97,8 +97,9 @@ algo_headers =                                  \
   %D%/algos/push-weights.hh                     \
   %D%/algos/quotient.hh                         \
   %D%/algos/quotkbaseb.hh                       \
+  %D%/algos/random-automaton.hh                 \
   %D%/algos/random-expression.hh                \
-  %D%/algos/random.hh                           \
+  %D%/algos/random-label.hh                     \
   %D%/algos/read.hh                             \
   %D%/algos/reduce.hh                           \
   %D%/algos/scc.hh                              \
